--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,3 @@
-.App {
-  text-align: center;
-}
-
 .icon-button {
   background: none;
   border: none;
@@ -10,4 +6,32 @@
 
 .c-link {
   cursor: pointer;
+}
+
+.start-page {
+  font-size: 30px;
+  height: 300px;
+  line-height: 300px;
+  color: #ccc;
+  text-align: center;
+}
+
+.left-panel {
+  height: 100vh;
+  position: relative;
+}
+
+.button-group {
+  position: absolute;
+  width: 100%;
+  bottom: 0;
+}
+
+.no-border {
+  border-radius: 0 !important;
+}
+
+.row>* {
+  padding-left: 0 !important;
+  padding-right: 0 !important;
 }
