--- a/src/App.css
+++ b/src/App.css
@@ -21,6 +21,22 @@
   position: relative;
 }
 
+.right-panel {
+  position: relative;
+}
+
+.CodeMirror-scroll {
+  height: 600px !important;
+}
+
+.sync-status {
+  font-size: 12px;
+  color: #959694;
+  position: absolute;
+  bottom: 12px;
+  left: 10px;
+}
+
 .button-group {
   position: absolute;
   width: 100%;
